# FPSGameEngine

./: CMakeLists.txt  README.md  fpsengine
dependencies/glad/: glad.h
shader/: Shader.cpp  Shader.h  cube.frag  cube.vert
src/: config.h  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/src/: glad.c
